--- a/literature_notes/02b_politicisation.html
+++ b/literature_notes/02b_politicisation.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>03_theory</title>
+<title>02b_politicisation</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,19 +23,19 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="03_theory_files/libs/clipboard/clipboard.min.js"></script>
-<script src="03_theory_files/libs/quarto-html/quarto.js"></script>
-<script src="03_theory_files/libs/quarto-html/popper.min.js"></script>
-<script src="03_theory_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="03_theory_files/libs/quarto-html/anchor.min.js"></script>
-<link href="03_theory_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="03_theory_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="03_theory_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="03_theory_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="03_theory_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
-<script src="03_theory_files/libs/quarto-diagram/mermaid.min.js"></script>
-<script src="03_theory_files/libs/quarto-diagram/mermaid-init.js"></script>
-<link href="03_theory_files/libs/quarto-diagram/mermaid.css" rel="stylesheet">
+<script src="02b_politicisation_files/libs/clipboard/clipboard.min.js"></script>
+<script src="02b_politicisation_files/libs/quarto-html/quarto.js"></script>
+<script src="02b_politicisation_files/libs/quarto-html/popper.min.js"></script>
+<script src="02b_politicisation_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="02b_politicisation_files/libs/quarto-html/anchor.min.js"></script>
+<link href="02b_politicisation_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="02b_politicisation_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="02b_politicisation_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="02b_politicisation_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="02b_politicisation_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="02b_politicisation_files/libs/quarto-diagram/mermaid.min.js"></script>
+<script src="02b_politicisation_files/libs/quarto-diagram/mermaid-init.js"></script>
+<link href="02b_politicisation_files/libs/quarto-diagram/mermaid.css" rel="stylesheet">
 
 
 </head>
@@ -48,7 +48,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">03_theory</h1>
+<h1 class="title">02b_politicisation</h1>
 </div>
 
 
@@ -63,37 +63,48 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="how-can-it-vary-across-countries-and-political-parties" class="level3">
+<h3 class="anchored" data-anchor-id="how-can-it-vary-across-countries-and-political-parties">How can it vary across countries and political parties</h3>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <div>
 <pre class="mermaid mermaid-js">flowchart LR
-  A[Hard edge] --&gt; B(Round edge)
-  B --&gt; C{Paris Agreement}
-  C --&gt; |Climate accountability of government| D[Opposition by LWP]
-  C --&gt; |Salience policy cost| E[Opposition by RWP]
-  D --&gt; F[Polarization]
-  E --&gt; F[Polarization]
+PO[Public Opinion] &lt;--&gt; Protest[Protest]
+PO &lt;--&gt; Media[Media]
+Protest &lt;--&gt; Media
+Protest --&gt; Parties[Parties]
+Media --&gt; Parties
+PO --&gt; Parties
 </pre>
 </div>
 </div>
 </div>
 </div>
-<p>Claim leadership on a goal and avoid general costs : try to fit as valence. But positional as the discussion turn to means.</p>
-<p>Double movements of the capacities of government parties to claim credit and to avoid blame. When government parties can claim credit on a issue and nobody can contest it, it is hard for competitors to contest it and they would rather shut up.</p>
-<p>Government try to privatize conflict and opposition try to socialize conflict.</p>
-<section id="valence-issues-and-positional" class="level1">
-<h1>Valence issues and positional</h1>
-<p>Valence issues : idea of performance, credit-claiming, problem solving credibility, goal of “importance of climate change widely shared”</p>
-<p>Van der Brug 2017 : “most valence issues have ethat character only as long as the issue in framed in **relatively generic term*, while proving inevitably positional as soo as the debate shifts from goal to mean** (dans from issues to gals De sio). Depend of the level of abstraction.</p>
-<p>Issue become conflictual because what makes valence issue is performance, credit claiming on agreement –&gt; Turn to positional because performance is contested</p>
-<p>–&gt; Research have look to understand why some issues are more valence and more positional rather than others but not why on the same issue, parties change it to positional or valence –&gt; Understood as a party strategy.</p>
-<p>De sio et al : means to identify issues as valence : credibility goal. But debate whether valence/positional is theoretical expectation or something empirical depending on whether the goal is shared among the population. According to them, in saliency theory, actors seek to present their issues as valence and eluding the trade-offs. Really a question of shared-goal</p>
-<p>Petrocick in fact introduced a difference between performance-based ownershio and party consistency owenrship. He also majes a different with competence :” being better able than other parties to handle an issue” + “being sincere and committed” : long term ownership. Difference between associative and competence : what we are interested in is competence not associative.</p>
-<p>Van der Burg in its contribution in the Sage Handbook of Electoral Behavior argue that it is an “ambiguous concept”.</p>
-<p>But in the case of climate change : disagreement not only appears on the means, it appears on the degree of climate action we should have and on the contestation of performance.</p>
-<p>Looking at Carter et al on climate change, they to distinguish this but they see it as a state of issue competition : positional when different position and valence/consensual when not. But when do parties try to turn an issue which was salient into a positional one ? Lead to formation of positions, when parties have to position themselves, to take a position on a issue when they did not have to take one.</p>
-<p>–&gt; When do issues are valence and where do issues are conflictual ?</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<div>
+<pre class="mermaid mermaid-js">flowchart LR
+PO(Public Opinion) --&gt; Opp(Opportunities and constraints)
+Indi(Real-world indicators) --&gt; Opp
+Issue[Issue characteristics] --&gt; Opp
+Events[Critical events] --&gt; Opp
+Indi --&gt; PO
+Events --&gt; PO
+Opp --&gt; Parties[Issue mobilization by political parties]
+Parties --&gt; Parties
+PO &lt;--&gt; Protest
+PartyC(Party characteristics) --&gt; Parties
+Ideology[Ideology] --&gt; PartyC
+Government[Government Status] --&gt; PartyC
+Parties --&gt; PO
+Protest[Protest] --&gt; Opp
+</pre>
+</div>
+</div>
+</div>
+</div>
 </section>
 
 </main>
